syntax = "proto3";

package core.corepb.v1;

option go_package = "github.com/obolnetwork/charon/core/corepb/v1";

message Duty {    // core.Duty
  int64 slot = 1; // int64
  int32 type = 2; // core.DutyType
}

message UnsignedDataSet {    // core.UnsignedDataSet
  map<string,bytes> set = 1; // map[core.PubKey]core.UnsignedData
}

message ShareSignedDataSet {           // core.ShareSignedDataSet
  map<string,ShareSignedData> set = 1; // map[core.PubKey]core.ShareSignedData
}

message ShareSignedData { // core.ShareSignedData
  bytes data = 1;       // []byte
  bytes signature = 2;  // core.Signature
  int32 share_idx = 3;  // int
}
